[gd_scene load_steps=4 format=2]

[ext_resource path="res://Fonts/Oliciy.otf" type="DynamicFontData" id=1]
[ext_resource path="res://Scripts/UIController.gd" type="Script" id=3]

[sub_resource type="DynamicFont" id=2]
size = 60
font_data = ExtResource( 1 )

[node name="UI" type="CanvasLayer"]
pause_mode = 2
script = ExtResource( 3 )

[node name="WinScreen" type="PopupDialog" parent="."]
visible = true
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -306.0
margin_top = -201.0
margin_right = 307.0
margin_bottom = 202.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="RichTextLabel" type="Label" parent="WinScreen"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 96.0
margin_right = -98.0
margin_bottom = -314.0
custom_fonts/font = SubResource( 2 )
custom_colors/font_color = Color( 0.552941, 1, 0.305882, 1 )
text = "WIN"
align = 1
valign = 1
uppercase = true

[node name="BackToMenuButton" type="Button" parent="WinScreen"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 102.0
margin_top = 308.0
margin_right = -323.0
margin_bottom = -39.0
text = "GIVE UP"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="NextLevelButton" type="Button" parent="WinScreen"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 334.0
margin_top = 307.0
margin_right = -91.0
margin_bottom = -39.0
text = "NEXT LEVEL"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LooseScreen" type="PopupDialog" parent="."]
visible = true
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -306.0
margin_top = -201.0
margin_right = 307.0
margin_bottom = 202.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="RichTextLabel" type="Label" parent="LooseScreen"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 96.0
margin_right = -98.0
margin_bottom = -314.0
custom_fonts/font = SubResource( 2 )
custom_colors/font_color = Color( 1, 0.286275, 0.286275, 1 )
text = "LOOSE"
align = 1
valign = 1
uppercase = true

[node name="BackToMenuButton" type="Button" parent="LooseScreen"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 102.0
margin_top = 308.0
margin_right = -323.0
margin_bottom = -39.0
text = "GIVE UP"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="RetryLevelButton" type="Button" parent="LooseScreen"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 334.0
margin_top = 307.0
margin_right = -91.0
margin_bottom = -39.0
text = "RETRY LEVEL"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="GameFinishedScreen" type="PopupDialog" parent="."]
visible = true
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -306.0
margin_top = -201.0
margin_right = 307.0
margin_bottom = 202.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="RichTextLabel" type="Label" parent="GameFinishedScreen"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 4.0
margin_right = -2.0
margin_bottom = -314.0
custom_fonts/font = SubResource( 2 )
custom_colors/font_color = Color( 0.964706, 1, 0.388235, 1 )
text = "GAME FINISHED"
align = 1
valign = 1
uppercase = true

[node name="BackToMenuButton" type="Button" parent="GameFinishedScreen"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 102.0
margin_top = 308.0
margin_right = -323.0
margin_bottom = -39.0
text = "BACK TO MAIN MENU"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="InfiniteModButton" type="Button" parent="GameFinishedScreen"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 334.0
margin_top = 307.0
margin_right = -91.0
margin_bottom = -39.0
text = "TRY INFINITE MOD"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="RetryButton" type="Button" parent="."]
anchor_left = 1.0
anchor_right = 1.0
margin_left = -67.0
margin_bottom = 31.0
text = "RETRY"
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="button_up" from="WinScreen/BackToMenuButton" to="." method="_on_BackToMenuButton_button_up"]
[connection signal="button_up" from="WinScreen/NextLevelButton" to="." method="_on_NextLevelButton_button_up"]
[connection signal="button_up" from="LooseScreen/BackToMenuButton" to="." method="_on_BackToMenuButton_button_up"]
[connection signal="button_up" from="LooseScreen/RetryLevelButton" to="." method="_on_RetryLevelButton_button_up"]
[connection signal="button_up" from="GameFinishedScreen/BackToMenuButton" to="." method="_on_BackToMenuButton_button_up"]
[connection signal="button_up" from="GameFinishedScreen/InfiniteModButton" to="." method="_on_InfiniteModButton_button_up"]
[connection signal="button_up" from="RetryButton" to="." method="_on_RetryLevelButton_button_up"]
